added testimonial section

--- a/index.html
+++ b/index.html
@@ -93,7 +93,39 @@
         </div>
         
       </section>
-      <!-- my work section ends -->
+      <!-- my work section ends -->    
+      <!-- Testimonials section ends -->    
+      <section class="testimonials-sec">
+        <h2 class="test-title">What Client says</h2>
+          <div class="testimonials-container">
+            <div class="card">
+              <div class="img-holder"><img src="./images/jhankar2.png" alt="tutor"></div>
+              <h3>Jhanker Mahabub</h3>
+              <h6>CEO of Programming Hero</h6>
+              <p class="description"><q>We are proud to have you in your course. We need such a hard-working, result driven people to represent our nation to world. Thanks for using the power of technology</q></p>
+            </div>
+            <div class="card">
+              <div class="img-holder"><img src="./images/jhankar2.png" alt="tutor"></div>
+              <h3>Jhanker Mahabub</h3>
+              <h6>CEO of Programming Hero</h6>
+              <p class="description"><q>We are proud to have you in your course. We need such a hard-working, result driven people to represent our nation to world. Thanks for using the power of technology</q></p>
+            </div>
+            <div class="card">
+              <div class="img-holder"><img src="./images/jhankar2.png" alt="tutor"></div>
+              <h3>Jhanker Mahabub</h3>
+              <h6>CEO of Programming Hero</h6>
+              <p class="description"><q>We are proud to have you in your course. We need such a hard-working, result driven people to represent our nation to world. Thanks for using the power of technology</q></p>
+            </div>
+            <div class="card">
+              <div class="img-holder"><img src="./images/jhankar2.png" alt="tutor"></div>
+              <h3>Jhanker Mahabub</h3>
+              <h6>CEO of Programming Hero</h6>
+              <p class="description"><q>We are proud to have you in your course. We need such a hard-working, result driven people to represent our nation to world. Thanks for using the power of technology</q></p>
+            </div>
+          </div>
+        </h2>
+      </section>
+      <!-- Testimonial section ends -->    
     </main>
   </body>
 </html>
