--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Assignment</title>
+    <!-- icon cdn -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-*********" crossorigin="anonymous" />
     <!-- google font (open sans) -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -126,6 +128,45 @@
         </h2>
       </section>
       <!-- Testimonial section ends -->    
+      <!-- start footer section -->
+      <footer>
+        <div class="footer-columns">
+          <div class="footer-column">
+            <h3>Social Links</h3>
+            <ul class="social-links">
+              <li><a href="https://www.facebook.com"><i class="fab fa-facebook"></i> Facebook</a></li>
+              <li><a href="https://www.twitter.com"><i class="fab fa-twitter"></i> Twitter</a></li>
+              <li><a href="https://www.instagram.com"><i class="fab fa-instagram"></i> Instagram</a></li>
+            </ul>
+          </div>
+          <div class="footer-column">
+            <h3>Follow Us</h3>
+            <ul class="follow-us">
+              <li><a href="https://www.example.com/newsletter">Newsletter</a></li>
+              <li><a href="https://www.example.com/blog">Blog</a></li>
+              <li><a href="https://www.example.com/subscribe">Subscribe</a></li>
+            </ul>
+          </div>
+          <div class="footer-column">
+            <h3>Additional Section</h3>
+            <ul class="additional-section">
+              <li><a href="https://www.example.com/about">About Us</a></li>
+              <li><a href="https://www.example.com/contact">Contact Us</a></li>
+              <li><a href="https://www.example.com/terms">Terms of Service</a></li>
+            </ul>
+          </div>
+          <div class="footer-column">
+            <h3>Additional Column</h3>
+            <ul class="additional-column">
+              <li><a href="https://www.example.com/gallery">Gallery</a></li>
+              <li><a href="https://www.example.com/faq">FAQ</a></li>
+              <li><a href="https://www.example.com/careers">Careers</a></li>
+            </ul>
+          </div>
+        </div>
+      </footer>
+      
+      <!-- end footer section -->
     </main>
   </body>
 </html>
