--- a/index.html
+++ b/index.html
@@ -93,9 +93,33 @@
           <div class="column"><img src="./images/latest-work/work-2.jpg" alt="work sample"></div>
           <div class="column"><img src="./images/latest-work/work-3.jpg" alt="work sample"></div>
         </div>
-        
       </section>
       <!-- my work section ends -->    
+      <!-- Service section starts -->
+      <section class="service">
+        <h2>Get to know the Serveces</h2>
+        <div class="service-wrapper">
+          <ul class="services-list">
+            <li>Web Design</li>
+            <li>Graphic Design</li>
+            <li>Content Writing</li>
+            <li>SEO Optimization</li>
+            <li>Social Media Marketing</li>
+            <li>Mobile App Development</li>
+          </ul>
+          <!--  -->
+          <ul class="services-list">
+            <li>UI/UX Design</li>
+            <li>Video Production</li>
+            <li>Copywriting</li>
+            <li>E-commerce Solutions</li>
+            <li>Brand Consulting</li>
+            <li>Data Analysis</li>
+          </ul>
+          
+        </div>
+      </section>
+      <!-- Service section ends -->
       <!-- Testimonials section ends -->    
       <section class="testimonials-sec">
         <h2 class="test-title">What Client says</h2>
@@ -127,8 +151,28 @@
           </div>
         </h2>
       </section>
-      <!-- Testimonial section ends -->    
       <!-- start footer section -->
+      <!-- Contact section starts -->
+      <section class="contact">
+        <div>
+          <h2>Contact</h2>
+          <p>About services like web design and digital marketing</p>
+          <h2>Prompt below</h2>
+          <form>
+            <label for="name">Name:</label>
+            <input type="text" id="name" name="name" required><br>
+            <label for="email">Email:</label>
+            <input type="email" id="email" name="email" required><br>
+            <label for="password">Password:</label>
+            <input type="password" id="password" name="password" required><br>
+            <label for="phone">Phone:</label>
+            <input type="tel" id="phone" name="phone" required><br>
+            <input type="submit" value="Submit" class="btn-primary submit-btn">
+          </form>
+        </div>
+      </section>
+      <!-- Contact section ends -->
+      <!-- Testimonial section ends -->    
       <footer>
         <div class="footer-columns">
           <div class="footer-column">
